test/ll_parser_definitions_test.test
======= TEST: line 11:
parser test [ x y z {u,v,w} m (n (p)) ]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 11:
parser test [ x y z {u,v,w} m (n (p)) ]
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 11:
parser test [ x y z {u,v,w} m (n (p)) ]
                    ^^^^^^^
------- line 11:
parser test [ x y z {u,v,w} m (n (p)) ]
                              ^^^^^^^
------- line 11:
parser test [ x y z {u,v,w} m (n (p)) ]
                                 ^^^
======= END TEST
ERROR: too few defined names in line 12:
parser define bracket "[+"
^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: in line 13: expected quoted name after:
parser define bracket "[+" ...
                           ^^^
ERROR: extraneous stuff after selector name in line 14:
parser define selector this is a name ++
                                      ^^
parser print selectors:
        [ text, operator ]
parser print selectors:
        [ text, operator, operator 1 ]
ERROR: unrecognized selector name in line 22:
parser define bracket "[+" ... "+]" [text, operator 2]
                                           ^^^^^^^^^^
ERROR: in line 23: expected `,' after:
parser define bracket "[+" ... "+]" [text + operator]
                                     ^^^^
